versioned_docs/version-5.0/thong-tin-chung/donate.md
---
sidebar_position: 2
---

# Ủng hộ máy chủ

MineVui Network không có chức năng nạp thẻ và sẽ luôn **nói không với P2W**, nhưng để duy trì máy chủ hoạt động liên tục và ổn định cần chi phí và công sức rất lớn, và gần như là do mình tự bỏ ra. Vậy nên trang này được tạo ra để ~khều~ mong các bạn hãy ủng hộ cho mình nếu có thể để mình tiếp tục duy trì Minevui!

## Phương thức Donate
### Donate bằng cách chuyển khoản

> Khuyến khích dùng cách này để không bị trừ phí, đảm bảo mình sẽ nhận được toàn bộ số tiền mà các bạn donate!

Các bạn có thể chuyển khoản cho mình qua các ngân hàng sau:

| **Ngân hàng** | **Số tài khoản** |
|---------------|------------------|
| Sacombank     | 070119694599     |
| TPBank        | 0911474065       |

Hoặc qua các ví điện tử

| **Ví điện tử** | **Số điện thoại** |
|----------------|-------------------|
| Momo           | 0911474065        |
| ZaloPay        | 0911474065        |

> :warning: Tất cả địa chỉ trên đều có tên chủ tài khoản là **LE VAN DAT**. Khi donate các bạn hãy ghi lời nhắn là username Discord hoặc nhắn tin trực tiếp cho mình qua Discord để giúp bạn hưởng đặc quyền nhé!

### Donate khi không có tài khoản ngân hàng

Một số bạn chưa có tài khoản ngân hàng có thể gửi **thẻ nạp điện thoại** trực tiếp cho mình qua Discord.

## Quyền lợi của Donator
### Role VIP

Khi các bạn donate thì sẽ nhận role **Donator** trong Discord và **Rank trong máy chủ game** tương ứng với mức đã ủng hộ. Cụ thể trong bảng dưới đây:

| **Rank** | **Giá trị ủng hộ** | **Kích cỡ balo** | **Quyền lợi khác** |
|----------|--------------------|------------------|--------------------|
| SVIP     | 1K -> dưới 50K     |       3 x 9      |                    |
| SVIP+    | 50K -> dưới 150K   |       4 x 9      |                    |
| SVIP++   | 150K -> dưới 300K  |       4 x 9      |                    |
| SSVIP    | 300K -> dưới 500K  |       5 x 9      |                    |
| SSVIP+   | 500K -> dưới 750K  |       5 x 9      |                    |
| SSVIP++  | 750K -> dưới 1M    |       6 x 9      |                    |
| SSSVIP   | 1M trở lên         |       6 x 9      |                    |

> :warning: Các quyền lợi đang được tính toán và sẽ cập nhật liên tục! Các đặc quyền không mang tính tác động đến cân bằng trò chơi, không ảnh hưởng người khác.

## Lời cảm ơn

Dưới đây là danh sách các **Donator** đã ủng hộ cho MineVui! Xin chân thành cảm ơn các bạn đã góp phần duy trì máy chủ!

| **Discord username** | **Tổng giá trị ủng hộ** |
|----------------------|-------------------------|
| orinowo              | 650.000                 |
| _its.anna            | 370.000                 |
| huytbb               | 300.000                 |
| cheems2807           | 100.000                 |
| shiluvaimeesm        | 100.000                 |
| Byuni28#1242         | 75.000                  |
| tranninh             | 70.000                  |
| LH_Janne#2290        | 50.000                  |
| naterds              | 31.000                  |
| kkuhaku001           | 20.000                  |
| cat7745              | 20.000                  |
