versioned_docs/version-7.5/thong-tin-chung/donate.md
---
sidebar_position: 2
---

# Ủng hộ máy chủ

MineVui Network không có chức năng nạp thẻ và sẽ luôn **nói không với P2W**, nhưng để duy trì máy chủ hoạt động liên tục và ổn định cần chi phí và công sức rất lớn, và gần như là do mình tự bỏ ra. Vậy nên trang này được tạo ra để ~khều~ mong các bạn hãy ủng hộ cho mình nếu có thể để mình tiếp tục duy trì Minevui!

## Phương thức Donate
### Donate bằng cách chuyển khoản

> Khuyến khích dùng cách này để không bị trừ phí, đảm bảo mình sẽ nhận được toàn bộ số tiền mà các bạn donate!

Các bạn có thể chuyển khoản cho mình qua các ngân hàng sau:

| **Ngân hàng** | **Số tài khoản** |
|---------------|------------------|
| Sacombank     | 070119694599     |

Hoặc qua các ví điện tử

| **Ví điện tử** | **Số điện thoại** |
|----------------|-------------------|
| Momo           | 0911474065        |
| ZaloPay        | 0911474065        |

> :warning: Tất cả địa chỉ trên đều có tên chủ tài khoản là **LE VAN DAT**. Khi donate các bạn hãy ghi lời nhắn là username Discord hoặc nhắn tin trực tiếp cho mình qua Discord để giúp bạn hưởng đặc quyền nhé!

### Donate khi không có tài khoản ngân hàng

Một số bạn chưa có tài khoản ngân hàng có thể gửi **thẻ nạp điện thoại** trực tiếp cho mình qua Discord.

## Quyền lợi của Donator
### Role VIP

Khi các bạn donate thì sẽ nhận role **Donator** trong Discord và **Rank trong máy chủ game** tương ứng với mức đã ủng hộ. Cụ thể trong bảng dưới đây:

![donate perk](image.png)

> :warning: Các quyền lợi đang được tính toán và sẽ cập nhật liên tục! Các đặc quyền không mang tính tác động đến cân bằng trò chơi, không ảnh hưởng người khác.

## Lời cảm ơn

Dưới đây là danh sách các **Donator** đã ủng hộ cho MineVui! Xin chân thành cảm ơn các bạn đã góp phần duy trì máy chủ!

```
#1 - @arumakaiyo (650k)
#2 - @huytbb (300k)
#3 - @maryw.shii (120k)
#4 - @naterds (117k)
#5 - @cheems2807 (100k )
#6 - @byuni28 (75k)
#7 - @tranninh (70k)
#8 - @lh_janne2290 (50k)
#9 - @kkuhaku001 (20k)
#9 - @hieuhoangtrung (20k)
#9 - @cat7445 (20k)
#9 - @smthismiss (20k)
#13 - @totallynotkhang (10k)
```